--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "next": "15.3.2",
+    "node-cache": "^5.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "string-similarity": "^4.0.4"
